# web-apis-service

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml
migrations/2024-01-11-144230_create_crates/: up.sql
migrations/2024-01-18-174659_create_users/: up.sql
migrations/2024-01-18-174734_create_users_roles/: up.sql
src/: auth.rs  mail.rs  main.rs  models.rs  repositories.rs
src/rocket_routes/: authorization.rs  crates.rs  mod.rs  rustaceans.rs
templates/email/: digest.html
tests/: authorization.rs  crates.rs  rustaceans.rs
tests/common/: mod.rs
tests/tests_common/: mod.rs
