[package]
name = "web-apis-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] } 
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
diesel = { version = "2.1.0", features = ["postgres", "chrono"] }
diesel_migrations = "2.1.0"
chrono = { version = "0.4.31", features = ["serde"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4" }

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] } 
tokio = { version = "1", features = ["full"] }