[package]
name = "web-apis-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rocket = { version = "0.5.0", features = ["json"] } 
rocket_db_pools = { version = "0.1", features = ["diesel_postgres", "deadpool_redis"] }
diesel = { version = "2.1.0", features = ["chrono"] }
diesel-async = { version = "0.4.1", features = ["postgres"] }
diesel_migrations = "2.1.0"

chrono = { version = "0.4.31", features = ["serde"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = { version = "0.4" }
argon2 = "0.5.2"
rand = "0.8.5"

tera = "1.19.1"
lettre = "0.11.3"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] } 